# reels-project

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  PIPELINE.md  README.md  pyproject.toml
config/: default.yaml
data/: taxonomy.json
data/templates/reels_87a0d2c1/: source.txt  template.json
reels/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging.py  pipeline.py  storage.py
reels/analysis/: __init__.py  base.py  camera.py  place.py  rhythm.py  runner.py  speech.py  subtitle.py  taxonomy.py
reels/db/: __init__.py  repository.py
reels/ingest/: __init__.py  downloader.py  normalizer.py  probe.py
reels/models/: __init__.py  analysis.py  metadata.py  shot.py  template.py
reels/production/: __init__.py  agent.py  cache.py  claim_gate.py  copy_writer.py  feature_extractor.py  models.py  render_spec.py  storyboard_builder.py  template_matcher.py  web_verifier.py
reels/production/backends/: __init__.py  base.py  claude_vision.py  clip_vision.py
reels/production/creative_team/: __init__.py  director.py  llm.py  models.py  planner.py  reviewer.py  team_agent.py  writer.py
reels/segmentation/: __init__.py  detector.py  postprocess.py
reels/synthesis/: __init__.py  assembler.py  schema_validator.py
reels/utils/: audio.py  image.py  paths.py  video.py
tests/: conftest.py
tests/fixtures/: sample_metadata.json  sample_shots.json  sample_template.json
tests/integration/: test_pipeline.py
tests/unit/: test_cli_produce.py  test_config.py  test_exceptions.py  test_models.py  test_pipeline.py  test_storage.py
(+46 files in other folders)
